--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,7 @@
   "parserOptions": {
     "ecmaVersion": 2018
   },
-  "extends": ["eslint:recommended", "pretier"],
+  "extends": ["eslint:recommended", "prettier"],
   "env": {
     "es6": true,
     "node": true,
